// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#createIamUserAssignedIamRoleRelationship should convert to relationship using service account 1`] = `
Object {
  "_class": "ASSIGNED",
  "_fromEntityKey": "j1-gc-integration-dev-sa@j1-gc-integration-dev.iam.gserviceaccount.com",
  "_key": "j1-gc-integration-dev-sa@j1-gc-integration-dev.iam.gserviceaccount.com|assigned|projects/j1-gc-integration-dev/roles/myrole",
  "_toEntityKey": "projects/j1-gc-integration-dev/roles/myrole",
  "_type": "google_cloud_iam_service_account_assigned_role",
  "displayName": "ASSIGNED",
  "projectId": "abc123",
}
`;

exports[`#createIamUserAssignedIamRoleRelationship should convert to relationship using user 1`] = `
Object {
  "_class": "ASSIGNED",
  "_fromEntityKey": "test.user@example.com",
  "_key": "test.user@example.com|assigned|projects/j1-gc-integration-dev/roles/myrole",
  "_toEntityKey": "projects/j1-gc-integration-dev/roles/myrole",
  "_type": "google_cloud_iam_user_assigned_role",
  "displayName": "ASSIGNED",
  "projectId": "abc123",
}
`;

exports[`#createIamUserAssignedIamRoleRelationship should convert to relationship with conditions in role 1`] = `
Object {
  "_class": "ASSIGNED",
  "_fromEntityKey": "j1-gc-integration-dev-sa@j1-gc-integration-dev.iam.gserviceaccount.com",
  "_key": "j1-gc-integration-dev-sa@j1-gc-integration-dev.iam.gserviceaccount.com|assigned|projects/j1-gc-integration-dev/roles/myrole",
  "_toEntityKey": "projects/j1-gc-integration-dev/roles/myrole",
  "_type": "google_cloud_iam_service_account_assigned_role",
  "conditionDescription": "Test description",
  "conditionExpression": "resource.name != \\"bogusunknownresourcename\\"",
  "conditionLocation": undefined,
  "conditionTitle": "Test title",
  "displayName": "ASSIGNED",
  "projectId": "abc123",
}
`;
